# topbar

./: .gitignore  AGENT.md  Cargo.toml  README.md  TODO.md  run.sh
docs/: resource-usage.md
src/: config.rs  draw.rs  exec.rs  main.rs  wayland.rs
src/modules/: backlight.rs  battery.rs  bluetooth.rs  clipboard.rs  clock.rs  cpu.rs  cpu_freq.rs  layout.rs  mega.rs  memory.rs  mod.rs  network.rs  notifications.rs  pulseaudio.rs  temp.rs  test_render.rs  timer.rs  window.rs  workspaces.rs
